Successful generation of JWT and response from login enpoint